--- a/.github/workflows/FriendlyWrt-CI.yml
+++ b/.github/workflows/FriendlyWrt-CI.yml
@@ -74,12 +74,11 @@ jobs:
           rm -rf artifact
           mkdir artifact
           cp friendlywrt-rk3328/configs/config_rk3328_shensven artifact
-          gzip friendlywrt-rk3328/out/*.img
-          mv friendlywrt-rk3328/out/*.img.gz artifact
+          cp friendlywrt-rk3328/out/*.img artifact
           
       - name: Upload Artifact
         uses: actions/upload-artifact@master
         with:
-          name: FriendlyWrt for RK3328 Build
+          name: FriendlyWrt for NanoPi R2S
           path: artifact
           
