--- a/.github/workflows/FriendlyWrt-CI.yml
+++ b/.github/workflows/FriendlyWrt-CI.yml
@@ -41,11 +41,11 @@ jobs:
           repo init -u https://github.com/friendlyarm/friendlywrt_manifests -b master-v19.07.1 -m rk3328.xml --repo-url=https://github.com/friendlyarm/repo  --no-clone-bundle
           repo sync -c  --no-clone-bundle
 
-      - name: Update Feeds
-        run: |
-          cd friendlywrt-rk3328/friendlywrt/
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
+      #- name: Update Feeds
+      #  run: |
+      #    cd friendlywrt-rk3328/friendlywrt/
+      #    ./scripts/feeds update -a
+      #    ./scripts/feeds install -a
 
       #- name: Generate Configuration File
       #  run: |
