--- a/.github/workflows/FriendlyWrt-CI.yml
+++ b/.github/workflows/FriendlyWrt-CI.yml
@@ -75,6 +75,7 @@ jobs:
           rm -rf artifact
           mkdir artifact
           cp friendlywrt-rk3328/out/*.img artifact
+          cp friendlywrt-rk3328/configs/config_rk3328 artifact
           
       - name: Upload Artifact
         uses: actions/upload-artifact@master
