--- a/.github/workflows/FriendlyWrt-CI.yml
+++ b/.github/workflows/FriendlyWrt-CI.yml
@@ -24,46 +24,30 @@ jobs:
         run: |
           docker rmi `docker images -q`
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
-          sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
-          sudo -E apt-get update
-          sudo -E apt-get -y autoremove --purge
-          sudo -E apt-get clean
+          sudo apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
+          sudo apt-get update
+          sudo apt-get -y upgrade
+          sudo apt-get -y autoremove --purge
+          sudo apt-get clean
           wget -O - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | bash
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "i@shensven.com"
+          git config --local user.name "GenSven"
           git clone https://github.com/friendlyarm/repo
           sudo cp repo/repo /usr/bin/
           df -h
 
       - name: Get Source Code
         run: |
-          rm -rf friendlywrt-rk3328
           mkdir friendlywrt-rk3328
           cd friendlywrt-rk3328/
           repo init -u https://github.com/friendlyarm/friendlywrt_manifests -b master-v19.07.1 -m rk3328.xml --repo-url=https://github.com/friendlyarm/repo  --no-clone-bundle
-          repo sync -c  --no-clone-bundle
+          repo sync -c  --no-clone-bundle -j2
 
-      #- name: Update Feeds
-      #  run: |
-      #    cd friendlywrt-rk3328/friendlywrt/
-      #    ./scripts/feeds update -a
-      #    ./scripts/feeds install -a
-
-      #- name: Generate Configuration File
-      #  run: |
-      #    rm -f friendlywrt-rk3328/friendlywrt/.config
-      #    cp config friendlywrt-rk3328/friendlywrt/.config
-
-      #- name: Make defconfig
-      #  run: |
-      #    cd friendlywrt-rk3328/friendlywrt/
-      #    ./scripts/diffconfig.sh > ../configs/config_rk3328_shensven
-
-      - name: Set My Configuration
+      - name: Generate Configuration File
         run: |
           rm -f friendlywrt-rk3328/configs/config_rk3328
-          cp config friendlywrt-rk3328/configs/config_rk3328
-
+          cp config_rk3328_shensven friendlywrt-rk3328/configs/config_rk3328
+          
       - name: Build FriendlyWrt
         run: |
           cd friendlywrt-rk3328/
