--- a/.github/workflows/FriendlyWrt-CI.yml
+++ b/.github/workflows/FriendlyWrt-CI.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2.1.0
         with:
           ref: master
 
@@ -63,7 +63,7 @@ jobs:
           cp friendlywrt-rk3328/configs/config_rk3328 artifact
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v1.0.0
         with:
           name: FriendlyWrt for NanoPi R2S
           path: artifact
