--- a/.github/workflows/FriendlyWrt-CI.yml
+++ b/.github/workflows/FriendlyWrt-CI.yml
@@ -14,6 +14,11 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
+      - name: Setup timezone
+        uses: zcong1993/setup-timezone@v1.0
+        with:
+          timezone: Asia/Shanghai
+
       - name: Checkout
         uses: actions/checkout@v2.1.0
         with:
